--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jamen/concat"
+    "url": "https://github.com/jamen/node-concat"
   },
   "scripts": {
-    "test": "eslint index.js test; tape 'test/*.js'"
+    "test": "eslint index.js test; tape 'test/*.js' | tap-spec"
   },
   "private": false,
   "files": [
-    "lib"
+    "index.js"
   ],
   "devDependencies": {
     "eslint": "^2.7.0",
